--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -50,6 +50,9 @@ Successful
 <p><b>mips-sgi-irix6.5</b><br>
 Successful
 
+<p><b>powperpc-unknown-linux-gnulibc1</b> <br>
+Successful
+
 <p><b>rs6000-ibm-aix4.1.4.0</b> <br>
 Successful
 
