--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -8,6 +8,9 @@
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
+<p><b>alphaev56-unknown-linux-gnu</b><br>
+Successful
+
 <p><b>alphaev5-unknown-linux-gnu</b><br>
 Successful
 
@@ -27,6 +30,9 @@ Successful
 Successful
 
 <p><b>i686-unknown-linux-gnu</b><br>
+Successful
+
+<p><b>i686-pc-cygwin32</b><br>
 Successful
 
 <p><b>i686-UnixWare7-sysv5</b><br>
