--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -609,7 +609,8 @@ touch `find egcs/texinfo -name Makefile.in -print`
 touch `find egcs/texinfo -name \*.pot -print`
 touch `find egcs/texinfo -name \*.gmo -print`
 touch egcs/gcc/{c-parse.y,cstamp-h.in,c-gperf.h,c-parse.c,c-parse.h,cexp.c}
-touch egcs/gcc/cp/{parse.c,parse.h}
+touch egcs/gcc/cp/parse.{c,h}
+touch egcs/gcc/java/parse.{c,h}
 touch egcs/gcc/objc/objc-parse.{c,y}
 touch egcs/libf2c/libU77/config.hin
 touch egcs/libf2c/libU77/stamp-h.in
