--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -20,6 +20,9 @@ Successful
 <p><b>hppa1.1-hp-hpux9.05</b><br>
 Successful
 
+<p><b>hppa1.1-hp-hpux9.07</b><br>
+Successful
+
 <p><b>hppa1.1-hp-hpux10.20</b><br>
 Successful
 
@@ -92,7 +95,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on September 9, 1998.</i>
+<i>Last modified on September 18, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
