--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -13,7 +13,40 @@ very much anymore, but who knows?
 <p>There is a separate project list for the <a
 href="proj-cpplib.html">C preprocessor</a>.
 
-<p>Haifa scheduler (haifa-sched.c, loop.[ch], unroll.[ch], genattrtab.c):
+<h2>Changes to support C99 draft</h2>
+
+The (not yet published) next revision of the C standard requires a
+number of library changes; these have to be provided by the C library,
+and not by gcc. A <a href="c9xstatus.html">short overview</a> of the C9x
+implementation status is available as well.
+
+<p>Some gcc changes are already available in gcc as extensions, but
+don't quite work:
+<ul>
+  <li>complex numbers support is currently broken
+  <li>C99 inline implies static
+  <li>VLA (variable length arrays) differ from the GCC extension (what difference)?
+  <li>designated initializer syntax differs ([x] = val instead of [x]val)
+  <li>compound array initialization does not support variables
+  <li>under -pedantic, some correct code is rejected (e.g. [0] array members)
+</ul>
+
+<p>There is a number of preprocessor changes, which need to be
+implemented both for cccp, and <a href="proj-cpplib.html">cpplib</a>:
+<ul>
+  <li>_Pragma special token
+  <li>predefined pragmas
+<ul>
+
+<p>A number of features is missing in the compiler proper:
+<ul>
+  <li>mixed declarations are not supported,
+  <li>various formatting characters are not known in printf/strftime,
+  <li>support for universal characters,
+  
+
+
+<h2>Haifa scheduler</h2> (haifa-sched.c, loop.[ch], unroll.[ch], genattrtab.c):
 (contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> before
 starting any serious haifa work)
 
@@ -48,7 +81,7 @@ starting any serious haifa work)
   they may need to be tuned to generate good schedules with haifa.
 </ul>
   
-<p>Improvements to global cse and partial redundancy elimination:
+<h2>Improvements to global cse and partial redundancy elimination:</h2>
 
 <p>The current implementation of global cse uses partial redundancy
 elimination via lazy code motion (lcm).
@@ -66,7 +99,7 @@ you're interested in working on lazy code motion.
 
 <hr>
 
-<p>The old PROJECTS file.  Stuff I know has been done has been deleted.
+<h2>The old PROJECTS file.</h2>  Stuff I know has been done has been deleted.
 Stuff in progress has a contact name associated with it.
 
 <p>Better optimization.
@@ -508,7 +541,7 @@ example:
 <li>  References to the literature for the algorithms used in GCC
 </ol>
 
-<small><i>Last modified August 20, 1999.</i></small>
+<small><i>Last modified September 7, 1999.</i></small>
 
 <hr>
 <p><a href="index.html">Return to the GCC home page</a>
