--- a/htdocs/timeline.html
+++ b/htdocs/timeline.html
@@ -25,10 +25,11 @@ number is maintained.
 <tr><td>EGCS 1.1.1</td><td>2.91.60</td><td>December 1, 1998</td></tr>
 <tr><td>EGCS 1.1.2</td><td>2.91.66</td><td>March 15, 1999</td></tr>
 <tr><td>GCC 2.95</td><td>2.95</td><td>July 31, 1999</td></tr>
+<tr><td>GCC 2.95.1</td><td>2.95.1</td><td>August 19, 1999</td></tr>
 </table>
 <hr>
 <a href="index.html">Return to the EGCS home page</a> &nbsp;
-<p><i>Last modified:  July 31, 1999</i>
+<p><i>Last modified:  September 11, 1999</i>
 
 </body>
 </html>
