--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -352,6 +352,13 @@ Unsuccessful:
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.8-1 on Windows 2000 5.0</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01370.html">3.0.3</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>Caldera 2.4, glibc 2.1.2</td>
 <td>Successful:
